--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10878,8 +10878,12 @@ nav h1, nav .h1 {
 
 .phone {
   font-family: sans-serif;
+  color: #302971;
 }
 
-a {
-  color: #302971 !important;
+.icon {
+  width: 16px;
+  height: 16px;
+  font-size: 16px;
+  color: #302971;
 }
