--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -69,8 +69,11 @@ nav{
 
 .phone{
     font-family: sans-serif;
+    color: #302971 ;
 }
-
-a{
-    color: #302971 !important;
+.icon{
+    width:16px;
+    height: 16px;
+    font-size: 16px;
+    color: #302971 ;
 }
