--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10881,3 +10881,8 @@ nav h1, nav .h1 {
   font-size: 16px;
   color: #302971;
 }
+
+.loader {
+  width: 16px !important;
+  height: 16px !important;
+}
