--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10886,3 +10886,9 @@ nav h1, nav .h1 {
   width: 16px !important;
   height: 16px !important;
 }
+
+div .uneditable-input-bg:focus {
+  border-color: rgb(93, 5, 5);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgb(93, 5, 5);
+  outline: 0 none;
+}
