--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10838,11 +10838,16 @@ body {
   height: 100%;
 }
 
-nav {
-  background-color: rgba(157, 178, 161, 0.9);
-}
 nav h1, nav .h1 {
   font-family: "Satisfy", cursive;
+}
+
+.nav-client {
+  background-image: url("/images/logo2.png");
+  background-size: 30%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #000;
 }
 
 .ml-3 {
@@ -10872,14 +10877,14 @@ nav h1, nav .h1 {
 
 .phone {
   font-family: sans-serif;
-  color: #302971;
+  color: #ffffff;
 }
 
 .icon {
   width: 16px;
   height: 16px;
   font-size: 16px;
-  color: #302971;
+  color: #f1eeee;
 }
 
 .loader {
@@ -10891,4 +10896,17 @@ div .uneditable-input-bg:focus {
   border-color: rgb(93, 5, 5);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgb(93, 5, 5);
   outline: 0 none;
+}
+
+.search-text {
+  font-weight: 400;
+  font-size: 20px;
+}
+
+div button.search-btn {
+  margin-left: -3px !important;
+}
+
+.catalog-icon {
+  fill: #ff2929;
 }
